--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -572,6 +572,7 @@ header .navbar .dropdown-menu .dropdown-item:active {
 #header.active .right-side-menu {
     background: rgb(0 0 0 / 39%);
     right: 0%;
+    height: 100vh;
 }
 
 .right-side-menu .menu-inner ul li:hover a,
