--- a/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
+++ b/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
@@ -41,43 +41,43 @@
             <div class="menu-inner">
                 <ul class="align-items-center w-100">
                     <li class="show-medium-devices nav-item active">
-                        <a class="nav-link" href="home.html"><i class="zmdi zmdi-assignment"></i>POS</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-assignment"></i>POS</a>
                     </li>
                     <li class="show-medium-devices">
-                        <a class="nav-link" href="transactions.html"><i class="zmdi zmdi-collection-text"></i>Transaction</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-collection-text"></i>Transaction</a>
                     </li>
                     <li class="show-medium-devices">
-                        <a class="nav-link" href="booking.html"><i class="zmdi zmdi-airline-seat-recline-extra"></i> Booking</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-airline-seat-recline-extra"></i> Booking</a>
                     </li>
                     <li class="show-medium-devices">
-                        <a class="nav-link" href="orders_status.html"><i class="zmdi zmdi-hourglass-alt"></i> Orders Status</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-hourglass-alt"></i> Orders Status</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="people.html"><i class="zmdi zmdi-accounts-alt"></i> People</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="people()"><i class="zmdi zmdi-accounts-alt"></i> People</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="wallet.html"><i class="zmdi zmdi-balance-wallet"></i> Wallet</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="wallet()"><i class="zmdi zmdi-balance-wallet"></i> Wallet</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="items.html"><i class="zmdi zmdi-cutlery"></i> Food Items</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="items()"><i class="zmdi zmdi-cutlery"></i> Food Items</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="reviews.html"><i class="zmdi zmdi-star"></i> Reviews</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="reviews()"><i class="zmdi zmdi-star"></i> Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="authentication.html"><i class="zmdi zmdi-shield-check"></i>Authentication</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="authentication()"><i class="zmdi zmdi-shield-check"></i>Authentication</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="setting.html"><i class="zmdi zmdi-settings"></i>Settings</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="setting()"><i class="zmdi zmdi-settings"></i>Settings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="support.html"><i class="zmdi zmdi-email"></i>Support</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-email"></i>Support</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="terms_conditions.html"><i class="zmdi zmdi-assignment"></i>Terms & Conditions</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-assignment"></i>Terms & Conditions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="zmdi zmdi-open-in-new"></i>Logout</a>
+                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-open-in-new"></i>Logout</a>
                     </li>
                 </ul>
             </div>
