pages setup init

--- a/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
+++ b/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
@@ -71,13 +71,13 @@
                         <a class="nav-link" href="javascript:void(0)" (click)="setting()"><i class="zmdi zmdi-settings"></i>Settings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-email"></i>Support</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="support()"><i class="zmdi zmdi-email"></i>Support</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-assignment"></i>Terms & Conditions</a>
+                        <a class="nav-link" href="javascript:void(0)" (click)="terms()"><i class="zmdi zmdi-assignment"></i>Terms & Conditions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><i class="zmdi zmdi-open-in-new"></i>Logout</a>
+                        <a class="nav-link" href="javascript:void(0)"(click)="login()"><i class="zmdi zmdi-open-in-new"></i>Logout</a>
                     </li>
                 </ul>
             </div>
