Page icon and carosal and changes init

--- a/ecommerce/ecommerce/src/app/reviews/reviews.component.html
+++ b/ecommerce/ecommerce/src/app/reviews/reviews.component.html
@@ -4,7 +4,7 @@
 
 <body id="page_reviews">
     <!-- Header Start -->
-    <app-header></app-header>>
+    <app-header></app-header>
     <!-- Header End -->
 
     <!-- Body Wrapper Start -->
