--- a/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
+++ b/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
@@ -59,6 +59,9 @@
                         <a class="nav-link" href="javascript:void(0)" (click)="wallet()"><i class="zmdi zmdi-balance-wallet"></i> Wallet</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0)" (click)="setup()"><i class="zmdi zmdi-accounts-alt"></i> Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)" (click)="items()"><i class="zmdi zmdi-cutlery"></i> Food Items</a>
                     </li>
                     <li class="nav-item">
