setup initial page init

--- a/ecommerce/ecommerce/src/app/setup/setup.component.html
+++ b/ecommerce/ecommerce/src/app/setup/setup.component.html
@@ -1,1 +1,72 @@
-<p>setup works!</p>
+<!doctype html>
+<html lang="en">
+
+<body id="page_setup">
+    <!-- Header Start -->
+    <app-header></app-header>
+    <!-- Header End -->
+
+    <!-- Body Wrapper Start -->
+    <div class="body_wrapper container-fluid">
+        <div class="row pt-4 px-2">
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="icon-map-marker"></i>
+                        <p>Location Setup</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="zmdi zmdi-cutlery"></i>
+                        <p>Menu Setup</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="zmdi zmdi-accounts-alt"></i>
+                        <p>Staff</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="zmdi zmdi-settings"></i>
+                        <p>Global Settings</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="icon-user"></i>
+                        <p>Partner Integrations</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="icon-globe"></i>
+                        <p>Sapaad Add-Ons</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3">
+                <div class="card p-3 p-xl-4 mb-3">
+                    <div class="text-center card-inner-scn">
+                        <i class="icon-suitcase"></i>
+                        <p>My Account</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
