--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -3707,3 +3707,12 @@ iframe {
 #page_reviews .page_title h1 span i {
     color: var(--primary);
 }
+
+.card-inner-scn {
+    padding: 20px;
+    height: 120px;
+i {
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+}
