--- a/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
@@ -9,7 +9,12 @@
     <!-- Body Wrapper Start -->
     <div class="body_wrapper container-fluid">
         <div class="row pt-4 px-2">
-            <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="location()">
+            <div class="col-12">
+                <div class="d-flex align-items-center head-tag cursor-pointer" (click)="location()">
+                    <h4> <i class="icon-arrow-left"></i> Locations</h4>
+                </div>
+                </div>
+            <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-map-marker"></i>
