general details init

--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -3736,4 +3736,8 @@ i {
     background: #75ca75;
     color: #fff;
     border: 1px solid #75ca75;
+    padding: 5px 10px;
+}
+.form-control {
+    margin-bottom: 15px;
 }
