--- a/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
@@ -14,11 +14,11 @@
                     <h4> <i class="icon-arrow-left"></i> Locations</h4>
                 </div>
                 </div>
-            <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
+            <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="generalDetails()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-map-marker"></i>
-                        <p>Location Setup</p>
+                        <p>General Details</p>
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="zmdi zmdi-cutlery"></i>
-                        <p>Menu Setup</p>
+                        <p>Menu Management</p>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="zmdi zmdi-settings"></i>
-                        <p>Global Settings</p>
+                        <p>Dining Sections</p>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-user"></i>
-                        <p>Partner Integrations</p>
+                        <p>Printer & Peripheral Settings</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-globe"></i>
-                        <p>Sapaad Add-Ons</p>
+                        <p>Delivery Settings</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-suitcase"></i>
-                        <p>My Account</p>
+                        <p>Self Ordering Systems</p>
                     </div>
                 </div>
             </div>
