Setup Menu Management init

--- a/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
+++ b/ecommerce/ecommerce/src/app/shared/components/header/header.component.html
@@ -21,7 +21,9 @@
                     <li class="nav-item show-only-large-devices">
                         <a class="nav-link" href="javascript:void(0)" (click)="orderStatus()"><i class="zmdi zmdi-hourglass-alt"></i> Orders Status</a>
                     </li>
-
+                    <li class="nav-item show-only-large-devices">
+                        <a class="nav-link" href="javascript:void(0)" (click)="setup()"><i class="zmdi zmdi-settings"></i> Setup</a>
+                    </li>
                     <li class="nav-item profile_img ml-auto" type="button" id="menu" (click)="menu()">
                         <div class="dropdown">
                             <span>
