--- a/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
+            <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="menu()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="zmdi zmdi-cutlery"></i>
