--- a/ecommerce/ecommerce/src/styles.scss
+++ b/ecommerce/ecommerce/src/styles.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../src/sass/base/all";
 @import "../src/sass/layout/all";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '../node_modules/ngx-simple-modal/styles/simple-modal.scss';
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
