--- a/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
+            <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="dining()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="zmdi zmdi-settings"></i>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-3 com-md-3">
+            <div class="col-12 col-sm-3 com-md-3" (click)="print()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-user"></i>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
+            <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="delivery()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-globe"></i>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
+            <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="selfOrder()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-suitcase"></i>
