--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -3766,3 +3766,7 @@ select.form-control {
 .fl-basis-100 {
     flex-basis: 100%;
 }
+.cust-pos-btn {
+    position: relative;
+    bottom: 8px;
+}
