--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -3770,3 +3770,10 @@ select.form-control {
     position: relative;
     bottom: 8px;
 }
+.btn-wrp-equal {
+    button {
+        width: 100px;
+        margin-bottom: 10px;
+        display: block;
+    }
+}
