--- a/ecommerce/ecommerce/src/app/setup/delivery-settings/delivery-settings.component.html
+++ b/ecommerce/ecommerce/src/app/setup/delivery-settings/delivery-settings.component.html
@@ -17,7 +17,7 @@
             <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
-                        <i class="icon-map"></i>
+                        <i class="icon-map-marker"></i>
                         <p>Delivery Area</p>
                     </div>
                 </div>
