add surcharge modal

--- a/ecommerce/ecommerce/src/app/setup/surcharges-discounts/surcharges-discounts.component.html
+++ b/ecommerce/ecommerce/src/app/setup/surcharges-discounts/surcharges-discounts.component.html
@@ -21,7 +21,7 @@
                     <div class="col-12">
                         <div class="d-flex align-items-center head-tag head-tag-light mt-2">
                             <h2>Additional Surcharges</h2>
-                            <button class="btn-setup-sucess"><i class="icon-plus mr-1"></i>Add Surcharge</button>
+                            <button class="btn-setup-sucess" (click)="openDialog()"><i class="icon-plus mr-1"></i>Add Surcharge</button>
                         </div>
                         </div>
                     <table class="table">
