--- a/ecommerce/ecommerce/src/app/setup/location/location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/location/location.component.html
@@ -12,7 +12,7 @@
             <div class="col-12">
                 <div class="d-flex align-items-center head-tag">
                     <h2>Locations</h2>
-                    <button class="btn-setup-sucess"><i class="icon-plus mr-1"></i>Add Location</button>
+                    <button class="btn-setup-sucess" (click)="addLocation()"><i class="icon-plus mr-1"></i>Add Location</button>
                 </div>
                 </div>
             <div class="col-12 col-sm-3 com-md-3">
