surcharges and discount

--- a/ecommerce/ecommerce/src/app/setup/add-location/add-location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/add-location/add-location.component.html
@@ -21,7 +21,7 @@
         <option value="3">Three</option>
     </select>
     <div class="d-flex modal-btn-footer">
-        <button class="btn-setup-sucess mr-2">Submit</button>
-        <button class="btn-setup-danger" (click)="close()">Cancel</button>
+        <button class="btn-setup-danger mr-2" (click)="close()">Cancel</button>
+        <button class="btn-setup-sucess">Submit</button>
     </div>
 </div>
