--- a/ecommerce/ecommerce/src/app/setup/add-order-discount/add-order-discount.component.html
+++ b/ecommerce/ecommerce/src/app/setup/add-order-discount/add-order-discount.component.html
@@ -1,13 +1,19 @@
-<div class="modal-wrapper">
-    <h2>Add Surcharge</h2>
+<div class="modal-wrapper modal-ht-custom">
+    <h2>Add Sales Discount</h2>
     <input type="text" class="form-control" placeholder="Name" />
-    <select class="form-control w-100" aria-label="Surcharge Type">
-        <option selected>Surcharge Type</option>
+    <select class="form-control w-100" aria-label="Discount Type">
+        <option selected>Discount Type</option>
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
     </select>
     <input type="text" class="form-control" placeholder="Rate" />
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked5">
+        <label class="form-check-label" for="flexCheckChecked5">
+            Discount On Total Amount
+        </label>
+    </div>
     <p>Enable For</p>
     <div class="row">
         <div class="col-12 col-sm-4">
@@ -49,6 +55,29 @@
                     E-Order
                 </label>
             </div>
+        </div>
+    </div>
+    <p>Discount Schedule</p>
+    <p>Specific Dates:</p>
+    <div class="row">
+        <div class="col-12 col-sm-6">
+            <label>From</label>
+            <input type="date" class="form-control" placeholder="From" />
+        </div>
+        <div class="col-12 col-sm-6">
+            <label>Until</label>
+            <input type="date" class="form-control" placeholder="Until" />
+        </div>
+    </div>
+    <p>Specific Time:</p>
+    <div class="row">
+        <div class="col-12 col-sm-6">
+            <label>From</label>
+            <input type="time" class="form-control" placeholder="From" />
+        </div>
+        <div class="col-12 col-sm-6">
+            <label>Until</label>
+            <input type="time" class="form-control" placeholder="Until" />
         </div>
     </div>
     <div class="d-flex modal-btn-footer">
