--- a/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
+++ b/ecommerce/ecommerce/src/app/setup/edit-location/edit-location.component.html
@@ -46,19 +46,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-3 com-md-3" (click)="print()">
-                <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
-                    <div class="text-center card-inner-scn">
-                        <i class="icon-user"></i>
-                        <p>Printer & Peripheral Settings</p>
-                    </div>
-                </div>
-            </div>
             <div class="col-12 col-sm-3 com-md-3 cursor-pointer" (click)="delivery()">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
                     <div class="text-center card-inner-scn">
                         <i class="icon-globe"></i>
                         <p>Delivery Settings</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3 com-md-3" (click)="print()">
+                <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
+                    <div class="text-center card-inner-scn">
+                        <i class="icon-print"></i>
+                        <p>Printer & Peripheral Settings</p>
                     </div>
                 </div>
             </div>
