--- a/ecommerce/ecommerce/src/app/setup/tax-rates/tax-rates.component.html
+++ b/ecommerce/ecommerce/src/app/setup/tax-rates/tax-rates.component.html
@@ -19,7 +19,7 @@
             <div class="col-12">
                 <div class="d-flex align-items-center head-tag head-tag-light mt-2">
                     <h2>Tax Rate</h2>
-                    <button class="btn-setup-sucess"><i class="icon-plus mr-1"></i>Add Tax</button>
+                    <button class="btn-setup-sucess" (click)="addTax()"><i class="icon-plus mr-1"></i>Add Tax</button>
                 </div>
                 </div>
                 <table class="table">
