--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -3766,6 +3766,9 @@ select.form-control {
 .fl-basis-100 {
     flex-basis: 100%;
 }
+.flex-gr-1 {
+flex-grow: 1;
+}
 .cust-pos-btn {
     position: relative;
     bottom: 8px;
