--- a/ecommerce/ecommerce/src/app/setup/delivery-settings/delivery-settings.component.html
+++ b/ecommerce/ecommerce/src/app/setup/delivery-settings/delivery-settings.component.html
@@ -16,7 +16,7 @@
                 </div>
             <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
-                    <div class="text-center card-inner-scn">
+                    <div class="text-center card-inner-scn" (click)="deliveryArea()">
                         <i class="icon-map-marker"></i>
                         <p>Delivery Area</p>
                     </div>
@@ -24,7 +24,7 @@
             </div>
             <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
                 <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
-                    <div class="text-center card-inner-scn">
+                    <div class="text-center card-inner-scn" (click)="deliveryManager()">
                         <i class="icon-user"></i>
                         <p>Delivery Manager</p>
                     </div>
