--- a/ecommerce/ecommerce/src/app/setup/dining/dining.component.html
+++ b/ecommerce/ecommerce/src/app/setup/dining/dining.component.html
@@ -32,7 +32,7 @@
                         <div class="col-12 col-sm-3"> <button class="btn-setup-danger">Remove Table<i
                                     class="icon-remove ml-1"></i></button></div>
                         <div class="col-12 col-sm-3">
-                            <button class="btn-setup-sucess mr-2">Add Table<i class="icon-plus ml-1"></i></button>
+                            <button class="btn-setup-sucess bg-grey mr-2">Add Table<i class="icon-plus ml-1"></i></button>
                             <button class="btn-setup-sucess">Save Table<i class="icon-print ml-1"></i></button>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <div class="col-12 col-sm-3"> <button class="btn-setup-danger">Remove Table<i
                                     class="icon-remove ml-1"></i></button></div>
                         <div class="col-12 col-sm-3">
-                            <button class="btn-setup-sucess mr-2">Add Table<i class="icon-plus ml-1"></i></button>
+                            <button class="btn-setup-sucess bg-grey mr-2">Add Table<i class="icon-plus ml-1"></i></button>
                             <button class="btn-setup-sucess">Save Table<i class="icon-print ml-1"></i></button>
                         </div>
                     </div>
