--- a/ecommerce/ecommerce/src/app/setup/setup.component.html
+++ b/ecommerce/ecommerce/src/app/setup/setup.component.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-3 com-md-3 cursor-pointer">
-                <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn">
+                <div class="card p-3 p-xl-4 mb-3 tag-hvr-scn" (click)="menuSetup()">
                     <div class="text-center card-inner-scn">
                         <i class="zmdi zmdi-cutlery"></i>
                         <p>Menu Setup</p>
