menu Setup Full

--- a/ecommerce/ecommerce/src/sass/layout/_style.scss
+++ b/ecommerce/ecommerce/src/sass/layout/_style.scss
@@ -3925,3 +3925,12 @@ select.form-control {
     color: #4a4a4a;
   }
 }
+.btn-ft-wrp {
+  justify-content: right;
+}
+.add-menu-wrp {
+  p {
+    color: #ccc;
+    font-weight: 500;
+  }
+}
